2022-04-06  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.03
    * New Statement JOINJKEYS to join two files
    * Test cases for join and examples (testjoin.sh or testjoin.bat in gcsort/tests/script)
    * New version of MAKEFILE MinGW compatible, review LIBs
    * Update help GCSORT
    * Updated command gcsort --help 

2022-01-19  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.02
    * Modified MAKEFILE project
    * New option RECORD CONTROL STATEMENT
    * New Date : DATE1, DATE2, DATE3, DATE4 with (+/-)days/month
    * New for INREC/OUTREC option CHANGE Lookup table and set with value or input field
    * Review comment style from '//' to '/*  ... */'
    * Fixed problems with TestCase modules
    * Update Help (gcsort --help) and documentation
    * Fixed memory leaks on some options and under certain conditions

2021-12-27  Sauro Menna  <smenna@users.sourceforge.net>
    * copyfile.c - Fixed problem with file name when name is environment variable
    * job.c - Fixed problem with variables used to compare fields - 
    * gcsorthelp.c - Modified option '--version' with new info 'gcsort 64bit-mode'

2021-09-14  Sauro Menna  <smenna@users.sourceforge.net>
    * job.c - Fix problem with empty file
    
2021-09-03  Sauro Menna  <smenna@users.sourceforge.net>
    * job.c - Integrated command with only INCLUDE COND condition
    *         Example: gcsort INCLUDE COND=<condition>    USE <filein>   RECORD ...  GIVE <fileout> RECORD ...
    
2021-05-21  Sauro Menna  <smenna@users.sourceforge.net>
    * Fix problem in INCLUDE/OMIT condition
    * Fix script to compile parser/scanner
    * Exit routine E15 - E35
    * E15 - E35 routine for file fixed / variable length
    * New source COBOL for test exit routines E15 and E35
    * Test Case for Routine E15 and E35
    * New OPTION Y2PAST (YY) - Sliding, (YYYY) century fixed
    * FORMAT Date : Y2B,Y2C,Y2D,Y2P,Y2S,Y2T2,Y2T3,Y2T4,Y2T5,Y2T6,Y2T8,Y2U,Y2V,Y2X,Y2Y,Y2Z